css cleanup. minor tweaks.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
       <ul class="footer-nav">
         <li><a href="http://cyphercore.io/team/" target=" ">About</a></li>
         <li><a href="https://medium.com/cypher-core" target=" ">Blog</a></li>
-        <li><a href="http://cyphercore.io/validator/" target=" ">Staking</a></li>
+        <li><a href="http://coris-docs.cyphercore.io/" target=" ">Docs</a></li>
       </ul>
     </div>
     <div class="col span-1-of-2">
