--- a/src/app/components/navigation/main-nav/main-nav.component.html
+++ b/src/app/components/navigation/main-nav/main-nav.component.html
@@ -32,7 +32,7 @@
                 </span>
                 <span>
                   <h1 class="brand-title">Coris</h1>
-                  <h5 class="brand-subtitle">by cypher core</h5>
+                  <h5 class="brand-subtitle">by Cypher Core</h5>
                 </span>
               <span class="spacer"></span>
               <span class="nav-links">
@@ -43,8 +43,8 @@
                   <li class="dropdown" appDropdown>
                     <a class="dropdown-toggle" role="button">Network<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="#">Mainnet</a></li>
-                      <li><a href="#">Testnet</a></li>
+                      <li><a href="#">MainNet</a></li>
+                      <li><a href="#">TestNet</a></li>
                     </ul>
                   </li>
               </span>
