--- a/src/app/components/navigation/main-nav/main-nav.component.css
+++ b/src/app/components/navigation/main-nav/main-nav.component.css
@@ -92,3 +92,30 @@
   z-index: inherit;
   background: #00796B;
 }
+
+.dropdown-toggle {
+  color: white;
+}
+
+.dropdown-menu {
+  background-color: #00796B;
+}
+
+
+.dropdown-menu a:link,
+.dropdown-menu a:visited {
+    color:white;
+    /* border-bottom: 1px solid transparent; */
+}
+
+.dropdown-menu a:hover,
+.dropdown-menu a:active {
+    color: #FC7D14;
+    background-color: #00796B;
+    /* border-bottom: 1px solid transparent; */
+}
+
+.dropdown-toggle:hover,
+.dropdown-toggle:active {
+    color: #FC7D14;
+}
