--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -8,7 +8,7 @@
   <div class="row proposer-row">
     <div style="cursor: pointer;" routerLink="/validators" fragment="{{(appState | async).round.proposer?.address}}">
       <h2 *ngIf="(appState | async).valsMap.size" class="title proposer-title">
-        Proposer - {{(appState | async).valsMap.get((appState | async).round.proposer?.address)}} 
+        <i class="ion-person"></i>&nbsp;Proposer - {{(appState | async).valsMap.get((appState | async).round.proposer?.address)}} 
       </h2>
     </div>
   </div>
@@ -57,7 +57,6 @@
         </mat-card>    
       </div>
       <div class="col span-1-of-4">
-        <div style="cursor: pointer;" routerLink="/validators" class="is-parent">
           <mat-card class="query-card" matTooltip="Total Bonded Stake" matTooltipPosition="above">
             <mat-card-header>
               <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -76,7 +75,6 @@
                 </h3>
             </mat-card-content>
           </mat-card>                  
-        </div>
       </div>
     </div>
     <div class="row" *ngIf="(appState | async).blocks.length; else elseBlock">
@@ -121,7 +119,6 @@
         </mat-card>    
       </div>
       <div class="col span-1-of-4">
-        <div style="cursor: pointer;" routerLink="/validators" class="is-parent">
           <mat-card class="query-card" matTooltip="ATOM USD Price" matTooltipPosition="above">
             <mat-card-header>
               <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -130,12 +127,11 @@
             </mat-card-header>
             <mat-card-content>
                 <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
-                  $ {{ atomData?.quote.USD.price | number:'.6' }}
+                  $ {{ atomData?.quote.USD.price | number:'.2-2' }}
                   <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
                 </h3>
             </mat-card-content>
           </mat-card>                  
-        </div>
       </div>
     </div>
   </div>
