--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -31,13 +31,17 @@
       <ng-container matColumnDef="fee">
         <mat-header-cell *matHeaderCellDef> Fee </mat-header-cell>
         <mat-cell *matCellDef="let tx">
-          {{ 
+          <!-- {{ 
             tx.details?.tx.value.fee.amount ?
             tx.details.tx.value.fee.amount[0].amount
               + ' ' 
               + tx.details.tx.value.fee.amount[0].denom :
             '-' 
-          }}
+          }} -->
+          {{ 
+            tx.details?.tx.value.fee.amount ?
+            tx.details.tx.value.fee.amount[0].amount : '0' 
+          }}&nbsp;<span class="ticker">uatom</span>
         </mat-cell>
       </ng-container>
   
