--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -47,7 +47,7 @@
       <td mat-cell *matCellDef="let validator">
         {{validator.tokens/1e6 | number:'.0-0'}}
         <br>
-        <span class="table-subtitle" matTooltip="Percentage" matTooltipPosition="above"><i class="ion-calculator"></i>&nbsp;({{validator.tokens/(appState | async).totalStake| percent:'.2-2'}})</span>
+        <span class="table-subtitle" matTooltip="Percentage" matTooltipPosition="above"><i class="ion-calculator"></i>&nbsp;{{validator.tokens/(appState | async).totalStake| percent:'.2-2'}}</span>
       </td>
     </ng-container>
   
@@ -55,7 +55,9 @@
 
     <ng-container matColumnDef="assets">
       <th mat-header-cell *matHeaderCellDef> Assets </th>
-      <td mat-cell *matCellDef="let validator">- balances<br>- rewards</td>
+      <td mat-cell *matCellDef="let validator">balance<br>
+        <span class="table-subtitle" matTooltip="Rewards" matTooltipPosition="above"><i class="ion-ios-pricetags"></i>&nbsp;rewards</span>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="delegators">
@@ -73,7 +75,8 @@
     <ng-container matColumnDef="unbond">
       <th mat-header-cell *matHeaderCellDef> Unbond </th>
       <td mat-cell *matCellDef="let validator">
-        - Un-bond<br>- completion time
+        Unbonding stake<br>
+        <span class="table-subtitle" matTooltip="Completion Time" matTooltipPosition="above"><i class="ion-android-time"></i>&nbsp;completion time</span>
       </td>
     </ng-container>
     
@@ -90,7 +93,7 @@
         <td mat-cell *matCellDef="let validator">
           {{validator.self_bond/1e6 | number:'.0-0'}} <span class="ticker">ATOM</span>
           <br>
-          <span class="table-subtitle" matTooltip="Percentage" matTooltipPosition="above"><i class="ion-calculator"></i>&nbsp;({{ validator.self_bond / validator.tokens | percent:'.2-2' }})</span>
+          <span class="table-subtitle" matTooltip="Percentage" matTooltipPosition="above"><i class="ion-calculator"></i>&nbsp;{{ validator.self_bond / validator.tokens | percent:'.2-2' }}</span>
         </td>
       </ng-container>
         
@@ -99,7 +102,7 @@
       <th mat-header-cell *matHeaderCellDef> Commission </th>
       <td mat-cell *matCellDef="let validator">
         <span matTooltip="Current Rate" matTooltipPosition="above">{{validator.commission?.rate | percent}}</span><br>
-        <span class="table-subtitle" matTooltip="Max Rate - Max Change Rate" matTooltipPosition="above"><i class="ion-calculator"></i>&nbsp;({{validator.commission?.max_rate | percent}} - {{validator.commission?.max_change_rate | percent}})</span>
+        <span class="table-subtitle" matTooltip="Max Rate - Max Change Rate" matTooltipPosition="above"><i class="ion-calculator"></i>&nbsp;{{validator.commission?.max_rate | percent}} - {{validator.commission?.max_change_rate | percent}}</span>
       </td>
     </ng-container>
 
