Inflation from Cosmos stargate node added (temporary)

--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -114,7 +114,7 @@
             </mat-card-title>
           </mat-card-header>
           <mat-card-content>
-              <h3 class="title chain-queries-title box-value">Add inflation%</h3>
+              <h3 class="title chain-queries-title box-value">{{inflation| percent: '.2-2'}}</h3>
           </mat-card-content>
         </mat-card>    
       </div>
