--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -12,56 +12,61 @@
     </div>
   </div>
   <div class="card events-card">
-    <mat-table [dataSource]="txs" class="mat-elevation-z8">
+
+    <table mat-table
+          [dataSource]="txs" 
+          multiTemplateDataRows
+          class="mat-elevation-z8">
 
       <ng-container matColumnDef="hash">
-        <mat-header-cell [ngClass]="'txHashColumn'" *matHeaderCellDef> Hash </mat-header-cell>
-        <mat-cell [ngClass]="'txHashColumn'" *matCellDef="let tx">
-          {{tx.hash}}
-        </mat-cell>
+        <th mat-header-cell *matHeaderCellDef> Hash </th>
+        <td mat-cell *matCellDef="let tx"> {{tx.hash}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="type">
-        <mat-header-cell [ngClass]="'columnRightAlign'" *matHeaderCellDef> Type </mat-header-cell>
-        <mat-cell [ngClass]="'columnRightAlign'" *matCellDef="let tx">
-          {{tx.tagsDecod[0].value | titlecase}}
-        </mat-cell>
+        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <td mat-cell *matCellDef="let tx"> {{tx.tagsDecod[0].value | titlecase}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="fee">
-        <mat-header-cell [ngClass]="'columnRightAlign'" *matHeaderCellDef> Fee </mat-header-cell>
-        <mat-cell [ngClass]="'columnRightAlign'" *matCellDef="let tx">
-          <!-- {{ 
-            tx.details?.tx.value.fee.amount ?
-            tx.details.tx.value.fee.amount[0].amount
-              + ' ' 
-              + tx.details.tx.value.fee.amount[0].denom :
-            '-' 
-          }} -->
+        <th mat-header-cell *matHeaderCellDef> Fee </th>
+        <td mat-cell *matCellDef="let tx"> 
           {{ 
             tx.details?.tx.value.fee.amount ?
             tx.details.tx.value.fee.amount[0].amount : '0' 
-          }}&nbsp;<span class="ticker">uatom</span>
-        </mat-cell>
+          }}&nbsp;<span class="ticker">uatom</span> 
+        </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="height">
-        <mat-header-cell [ngClass]="'columnRightAlign'" *matHeaderCellDef> Height </mat-header-cell>
-        <mat-cell [ngClass]="'columnRightAlign'" *matCellDef="let tx">
-          {{tx.height}}
-        </mat-cell>
+        <th mat-header-cell [ngClass]="'columnRightAlign'" *matHeaderCellDef> Height </th>
+        <td mat-cell [ngClass]="'columnRightAlign'" *matCellDef="let tx"> {{tx.height}} </td>
       </ng-container>
-  
-      <!-- <ng-container matColumnDef="timestamp">
-        <mat-header-cell *matHeaderCellDef> Timestamp </mat-header-cell>
-        <mat-cell *matCellDef="let tx">
-          add time
-        </mat-cell>
-      </ng-container> -->
-  
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+
+      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let tx" [attr.colspan]="displayedColumns.length">
+          <div
+              class="tx-detail"
+              [@detailExpand]="tx == expandedElement ? 'expanded' : 'collapsed'">
+            <div *ngIf="tx.tagsDecod[1].key">
+              {{tx.tagsDecod[1].key}} {{tx.tagsDecod[1].value}}
+            </div>
+            <div *ngIf="tx.tagsDecod[1].value">
+              {{tx.tagsDecod[2].key}} {{tx.tagsDecod[2].value}}
+            </div>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let tx; columns: displayedColumns;"
+          [class.example-expanded-row]="expandedElement === tx"
+          (click)="expandedElement = expandedElement === tx ? null : tx">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="tx-detail-row"></tr>
+    </table>
+
   </div>
   <nav class="pagination" role="navigation" aria-label="pagination">
     <button (click)="displayOlderTxs()" id="btn-older" class="pagination-next button is-dark">Older</button>
