--- a/src/app/components/navigation/main-nav/main-nav.component.html
+++ b/src/app/components/navigation/main-nav/main-nav.component.html
@@ -36,10 +36,10 @@
                 </span>
               <span class="spacer"></span>
               <span class="nav-links">
-                <a routerLink="/validators">Validators</a>
-                <a routerLink="/blocks">Blocks</a>
-                <a routerLink="/txs">Transactions</a>
-                <a routerLink="/gov">Governance</a>
+                <a routerLink="/validators" routerLinkActive="active-list-item">Validators</a>
+                <a routerLink="/blocks" routerLinkActive="active-list-item">Blocks</a>
+                <a routerLink="/txs" routerLinkActive="active-list-item">Transactions</a>
+                <a routerLink="/gov" routerLinkActive="active-list-item">Governance</a>
                   <li class="dropdown" appDropdown>
                     <a class="dropdown-toggle" role="button">Network<span class="caret"></span></a>
                     <ul class="dropdown-menu">
