WiP: improved validators filtering

--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -7,9 +7,11 @@
   -->
   <div class="bond-status">
     <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-      <mat-button-toggle (click)="statusFilter(2)">Bonded</mat-button-toggle>
-      <mat-button-toggle (click)="statusFilter(0)">Unbonded</mat-button-toggle>
-      <mat-button-toggle (click)="statusFilter(1)">Uhnbonding</mat-button-toggle>
+      <mat-button-toggle (click)="validatorsBondFilter(2)">Bonded</mat-button-toggle>
+      <mat-button-toggle (click)="validatorsJailedFilter(true)">Jailed</mat-button-toggle>
+      <mat-button-toggle (click)="validatorsFilter(0, false)">Unbonded</mat-button-toggle>
+      <mat-button-toggle (click)="validatorsBondFilter(1)">Uhnbonding</mat-button-toggle>
+      <mat-button-toggle (click)="validatorsNoFilter()">All</mat-button-toggle>
     </mat-button-toggle-group>    
   </div>
   <table  mat-table matSort (matSortChange)="sortData($event)" [dataSource]="dataSource" class="mat-elevation-z8">
