--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -17,10 +17,12 @@
 
     <ng-container matColumnDef="proposer">
       <th mat-header-cell *matHeaderCellDef> Proposer </th>
-      <td mat-cell *matCellDef="let block"> 
-        <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has(block.proposer) : false; else elseBlockProposer">
-          {{ (appState | async).valsMap.get(block.proposer)}}
-        </span>
+      <td mat-cell *matCellDef="let block">
+        <mat-chip-list><mat-chip color = "primary" selected>
+          <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has(block.proposer) : false; else elseBlockProposer">
+              {{ (appState | async).valsMap.get(block.proposer)}}
+          </span>
+        </mat-chip></mat-chip-list>
         <ng-template #elseBlockProposer>{{block.proposer}}</ng-template>
       </td>
     </ng-container>
