--- a/src/app/components/validators/validators.component.css
+++ b/src/app/components/validators/validators.component.css
@@ -146,3 +146,30 @@ tbody {
   justify-content: left;
   padding: 10px;
 }
+
+.dropdown-toggle {
+  color: white;
+}
+
+.dropdown-menu {
+  background-color: #00796B;
+}
+
+
+.dropdown-menu a:link,
+.dropdown-menu a:visited {
+    color:white;
+    /* border-bottom: 1px solid transparent; */
+}
+
+.dropdown-menu li:hover,
+.dropdown-menu li:active {
+    color: #FC7D14;
+    background-color: #00796B;
+    /* border-bottom: 1px solid transparent; */
+}
+
+.dropdown-toggle:hover,
+.dropdown-toggle:active {
+    color: #FC7D14;
+}
