--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -25,7 +25,12 @@
 
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef> Type </th>
-        <td mat-cell *matCellDef="let tx"><mat-chip-list><mat-chip color = "primary" selected>{{tx.tagsDecod[0].value | titlecase}}</mat-chip></mat-chip-list></td>
+        <td mat-cell *matCellDef="let tx">
+          <mat-chip-list>
+            <mat-chip color = "primary" selected>
+              {{tx.tagsDecod[0].value | titlecase}}
+            </mat-chip>
+          </mat-chip-list></td>
       </ng-container>
 
       <ng-container matColumnDef="fee">
