--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+  
   <div class="field has-addons">
     <div class="control">
       <input class="input" placeholder = "Enter tx hash" #queryInputRef >
@@ -11,6 +12,7 @@
       </a>
     </div>
   </div>
+
   <div class="card events-card">
 
     <table mat-table
@@ -44,8 +46,8 @@
       </ng-container>
 
       <ng-container matColumnDef="height">
-        <th mat-header-cell [ngClass]="'columnRightAlign'" *matHeaderCellDef> Height </th>
-        <td mat-cell [ngClass]="'columnRightAlign'" *matCellDef="let tx"> {{tx.height}} </td>
+        <th mat-header-cell *matHeaderCellDef> Height </th>
+        <td mat-cell *matCellDef="let tx"> {{tx.height}} </td>
       </ng-container>
 
       <ng-container matColumnDef="expandedDetail">
