Added expandable rows to validator component; hide unbond column when validator is not unbonding

--- a/src/app/components/validators/validators.component.css
+++ b/src/app/components/validators/validators.component.css
@@ -173,3 +173,13 @@ tbody {
 .dropdown-toggle:active {
     color: #FC7D14;
 }
+
+/* Expandable rows */
+tr {
+  cursor: pointer;
+}
+
+tr.validator-detail-row {
+  height: 0;
+  cursor: default;
+}
