--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -26,7 +26,7 @@
     </li> -->
 
   </div>
-  <table  mat-table matSort (matSortChange)="sortData($event)" [dataSource]="dataSource" class="mat-elevation-z8">
+  <table multiTemplateDataRows mat-table matSort (matSortChange)="sortData($event)" [dataSource]="dataSource" class="mat-elevation-z8">
     <!-- <ng-container matColumnDef="index">
       <th mat-header-cell *matHeaderCellDef> Index </th>
       <td mat-cell *matCellDef="let validator"> {{0}} </td>
@@ -110,9 +110,12 @@
     </ng-container>
 
     <ng-container matColumnDef="unbond">
-      <th mat-header-cell *matHeaderCellDef> Unbond </th>
-      <td mat-cell *matCellDef="let validator">
-        Unbonding stake<br>
+      <th  mat-header-cell *matHeaderCellDef> 
+        Unbond 
+      </th>
+      <td  mat-cell *matCellDef="let validator">
+        Unbonding stake
+        <br>
         <span class="table-subtitle" matTooltip="Completion Time" matTooltipPosition="above"><i class="ion-android-time"></i>&nbsp;completion time</span>
       </td>
     </ng-container>
@@ -143,8 +146,25 @@
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let validator" [attr.colspan]="displayedColumns.length">
+        <div
+            class="validator-detail"
+            [@detailExpand]="validator == expandedElement ? 'expanded' : 'collapsed'">
+          <div>
+            Address {{validator.operator_address}}
+          </div>
+        </div>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [appBgHighlight]="'#383D4C'" defaultColor="#111923"></tr>
+    <tr mat-row *matRowDef="let validator; columns: displayedColumns;"
+        [appBgHighlight]="'#383D4C'" defaultColor="#111923"
+        [class.example-expanded-row]="expandedElement === validator"
+        (click)="expandedElement = expandedElement === validator ? null : validator">
+    </tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="validator-detail-row"></tr>
   </table>
 
 </div>
