--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -35,6 +35,11 @@
           </mat-chip-list></td>
       </ng-container>
 
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <td mat-cell *matCellDef="let tx"> Success/Fail </td>
+      </ng-container>
+
       <ng-container matColumnDef="fee">
         <th mat-header-cell *matHeaderCellDef> Fee </th>
         <td mat-cell *matCellDef="let tx"> 
@@ -50,16 +55,21 @@
         <td mat-cell *matCellDef="let tx"> {{tx.height}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="timestamp">
+        <th mat-header-cell *matHeaderCellDef> Timestamp </th>
+        <td mat-cell *matCellDef="let tx"> to-add </td>
+      </ng-container>
+
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let tx" [attr.colspan]="displayedColumns.length">
           <div
               class="tx-detail"
               [@detailExpand]="tx == expandedElement ? 'expanded' : 'collapsed'">
             <div *ngIf="tx.tagsDecod[1]">
-              {{tx.tagsDecod[1].key}} {{tx.tagsDecod[1].value}}
+              {{tx.tagsDecod[1].key}}: {{tx.tagsDecod[1].value}}
             </div>
             <div *ngIf="tx.tagsDecod[1]">
-              {{tx.tagsDecod[2].key}} {{tx.tagsDecod[2].value}}
+              {{tx.tagsDecod[2].key}}: {{tx.tagsDecod[2].value}}
             </div>
           </div>
         </td>
@@ -68,7 +78,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let tx; columns: displayedColumns;"
           [class.example-expanded-row]="expandedElement === tx"
-          (click)="expandedElement = expandedElement === tx ? null : tx">
+          (click)="expandedElement = expandedElement === tx ? null : tx" matTooltip="Click to see more" matTooltipPosition="above">
       </tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="tx-detail-row"></tr>
     </table>
