--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -37,7 +37,10 @@
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let tx"> Success/Fail </td>
+        <td mat-cell *matCellDef="let tx"> 
+          <span *ngIf="tx.details?.logs[0].success === true">Succeed</span>
+          <span *ngIf="tx.details?.logs[0].success === false">Failed</span>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="fee">
