--- a/src/app/components/validators/validators.component.css
+++ b/src/app/components/validators/validators.component.css
@@ -183,3 +183,11 @@ tr.validator-detail-row {
   height: 0;
   cursor: default;
 }
+
+/* Description formatting */
+.overflowed-text {
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
